# simple-nat-traversal

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: main.yml  release.yml
examples/: client.rs
fixtures/: server.py
nat/: Cargo.toml
nat/src/: cache.rs  checksum.rs  client.rs  context.rs  crypto.rs  http.rs  http_handler.rs  lib.rs  message.rs  nat.rs  nat_handler.rs  protocols.rs  server.rs  ssh.rs  ssh_handler.rs  utils.rs
scripts/: clear-proxy.sh  set-proxy.sh  top-client.sh  top-server.sh
src/: client.rs  common.rs  http.rs  main.rs  message.rs  nat.rs  protocols.rs  server.rs  utils.rs
