[package]
name = "cpc-nat-traversal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-files = "0.6.2"
env_logger = "0.9.1"
log = "0.4.17"
awc = "3.0.1"
futures = "0.3.25"
tokio = {version="1.21.2", features=["full"]}
tokio-stream = "0.1.11"
futures-util = "0.3.25"
