[package]
name = "nat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.12", features = ["blocking"]}
env_logger = "0.9.1"
log = "0.4.17"
futures = "0.3.25"
tokio = {version="1.21.2", features=["full"]}
tokio-stream = "0.1.11"
futures-util = "0.3.25"
scrypt = "0.10.0"
aes = "0.8.2"
sha2 = "0.10.6"
rand = "0.8.5"
ip-in-subnet = "0.1.4"

